--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -24,6 +24,11 @@ p {
   padding: 8px 90px 8px 90px !important;
 }
 
+.btnLogin:hover {
+  background-color: transparent !important;
+  color: #fff !important;
+}
+
 .btnBackHome {
   font-size: 16px;
   font-weight: 600;
